documentacion/obtenida/ARINC 429/driver and software/LX708-1/API/L71W32NET.VB


    Public Declare Function L71_CardClose Lib "L71W32.DLL" Alias "_L71_CardClose@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_CardOpen Lib "L71W32.DLL" Alias "_L71_CardOpen@4" (ByVal cardnum As Int32) As UInt32
    Public Declare Sub L71_CardReset Lib "L71W32.DLL" Alias "_L71_CardReset@4" (ByVal handleval As UInt32)
    Public Declare Function L71_CardStart Lib "L71W32.DLL" Alias "_L71_CardStart@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_CardStop Lib "L71W32.DLL" Alias "_L71_CardStop@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_FieldGetAngle Lib "L71W32.DLL" Alias "_L71_FieldGetAngle@4" (ByRef buf As UInt16) As UInt16
    Public Declare Function L71_FieldGetAngleFl Lib "L71W32.DLL" Alias "_L71_FieldGetAngleFl@4" (ByRef buf As UInt16) As Single
    Public Declare Function L71_FieldGetControlAccept Lib "L71W32.DLL" Alias "_L71_FieldGetControlAccept@4" (ByRef buf As UInt16) As UInt16
    Public Declare Function L71_FieldGetData Lib "L71W32.DLL" Alias "_L71_FieldGetData@8" (ByVal binnum As Int32, ByRef buf As UInt16) As UInt16
    Public Declare Function L71_FieldGetDataAccept Lib "L71W32.DLL" Alias "_L71_FieldGetDataAccept@4" (ByRef buf As UInt16) As UInt16
    Public Declare Function L71_FieldGetFaults Lib "L71W32.DLL" Alias "_L71_FieldGetFaults@4" (ByRef buf As UInt16) As UInt16
    Public Declare Function L71_FieldGetGain Lib "L71W32.DLL" Alias "_L71_FieldGetGain@4" (ByRef buf As UInt16) As Int32
    Public Declare Function L71_FieldGetLabel Lib "L71W32.DLL" Alias "_L71_FieldGetLabel@4" (ByRef buf As UInt16) As UInt16
    Public Declare Function L71_FieldGetMode Lib "L71W32.DLL" Alias "_L71_FieldGetMode@4" (ByRef buf As UInt16) As UInt16
    Public Declare Function L71_FieldGetRange Lib "L71W32.DLL" Alias "_L71_FieldGetRange@4" (ByRef buf As UInt16) As Int32
    Public Declare Function L71_FieldGetTilt Lib "L71W32.DLL" Alias "_L71_FieldGetTilt@4" (ByRef buf As UInt16) As UInt16
    Public Declare Function L71_FieldGetTiltFl Lib "L71W32.DLL" Alias "_L71_FieldGetTiltFl@4" (ByRef buf As UInt16) As Single
    Public Declare Function L71_FieldPutAngle Lib "L71W32.DLL" Alias "_L71_FieldPutAngle@8" (ByVal value As UInt16, ByRef buf As UInt16) As UInt16
    Public Declare Function L71_FieldPutAngleFl Lib "L71W32.DLL" Alias "_L71_FieldPutAngleFl@8" (ByVal angle As Single, ByRef buf As UInt16) As Single
    Public Declare Function L71_FieldPutControlAccept Lib "L71W32.DLL" Alias "_L71_FieldPutControlAccept@8" (ByVal value As UInt16, ByRef buf As UInt16) As UInt16
    Public Declare Function L71_FieldPutData Lib "L71W32.DLL" Alias "_L71_FieldPutData@12" (ByVal value As UInt16, ByVal binnum As Int32, ByRef buf As UInt16) As UInt16
    Public Declare Function L71_FieldPutDataAccept Lib "L71W32.DLL" Alias "_L71_FieldPutDataAccept@8" (ByVal value As UInt16, ByRef buf As UInt16) As UInt16
    Public Declare Function L71_FieldPutFaults Lib "L71W32.DLL" Alias "_L71_FieldPutFaults@8" (ByVal value As UInt16, ByRef buf As UInt16) As UInt16
    Public Declare Function L71_FieldPutGain Lib "L71W32.DLL" Alias "_L71_FieldPutGain@8" (ByVal gain As Int32, ByRef buf As UInt16) As Int32
    Public Declare Function L71_FieldPutLabel Lib "L71W32.DLL" Alias "_L71_FieldPutLabel@8" (ByVal value As UInt16, ByRef buf As UInt16) As UInt16
    Public Declare Function L71_FieldPutMode Lib "L71W32.DLL" Alias "_L71_FieldPutMode@8" (ByVal value As UInt16, ByRef buf As UInt16) As UInt16
    Public Declare Function L71_FieldPutRange Lib "L71W32.DLL" Alias "_L71_FieldPutRange@8" (ByVal range As Int32, ByRef buf As UInt16) As Int32
    Public Declare Function L71_FieldPutTilt Lib "L71W32.DLL" Alias "_L71_FieldPutTilt@8" (ByVal value As UInt16, ByRef buf As UInt16) As UInt16
    Public Declare Function L71_FieldPutTiltFl Lib "L71W32.DLL" Alias "_L71_FieldPutTiltFl@8" (ByVal tilt As Single, ByRef buf As UInt16) As Single
    Public Declare Function L71_IntInstall Lib "L71W32.DLL" Alias "_L71_IntInstall@8" (ByVal hevent As IntPtr, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_IntRd Lib "L71W32.DLL" Alias "_L71_IntRd@12" (ByRef typevalval As UInt16, ByRef infoval As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_IntStatus Lib "L71W32.DLL" Alias "_L71_IntStatus@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_IntUninstall Lib "L71W32.DLL" Alias "_L71_IntUninstall@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_RcvConfig Lib "L71W32.DLL" Alias "_L71_RcvConfig@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_RcvConfigEx Lib "L71W32.DLL" Alias "_L71_RcvConfigEx@12" (ByVal rtconfigval As UInt32, ByVal intfreq As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_RcvMonBlkRd Lib "L71W32.DLL" Alias "_L71_RcvMonBlkRd@16" (ByRef buf As UInt16, ByVal bufcount As UInt32, ByRef blkcnt As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_RcvMonBlkRdEx Lib "L71W32.DLL" Alias "_L71_RcvMonBlkRdEx@20" (ByRef buf As UInt16, ByVal bufcount As UInt32, ByVal maxblkcnt As UInt32, ByRef blkcnt As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_RcvMonRd Lib "L71W32.DLL" Alias "_L71_RcvMonRd@8" (ByRef buf As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Function L71_RcvMonRdEx Lib "L71W32.DLL" Alias "_L71_RcvMonRdEx@12" (ByRef buf As UInt16, ByVal index As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Function L71_RcvMonStatus Lib "L71W32.DLL" Alias "_L71_RcvMonStatus@4" (ByVal handleval As UInt32) As Int32
    Public Declare Sub L71_RcvRd Lib "L71W32.DLL" Alias "_L71_RcvRd@8" (ByRef buf As UInt16, ByVal handleval As UInt32)
    Public Declare Function L71_XmtConfig Lib "L71W32.DLL" Alias "_L71_XmtConfig@8" (ByVal framefreq As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_XmtConfigEx Lib "L71W32.DLL" Alias "_L71_XmtConfigEx@16" (ByVal framefreq As UInt16, ByVal intfreq As UInt16, ByVal framecount As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_XmtConfigExx Lib "L71W32.DLL" Alias "_L71_XmtConfigExx@20" (ByVal xmtconfigval As UInt32, ByVal framefreq As UInt16, ByVal intfreq As UInt16, ByVal framecount As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Sub L71_XmtRd Lib "L71W32.DLL" Alias "_L71_XmtRd@12" (ByRef buf As UInt16, ByVal framenum As UInt16, ByVal handleval As UInt32)
    Public Declare Function L71_XmtStatus Lib "L71W32.DLL" Alias "_L71_XmtStatus@4" (ByVal handleval As UInt32) As Int32
    Public Declare Sub L71_XmtWr Lib "L71W32.DLL" Alias "_L71_XmtWr@12" (ByRef buf As UInt16, ByVal framenum As UInt16, ByVal handleval As UInt32)
    Public Declare Function L71_AddrDSP Lib "L71W32.DLL" Alias "_L71_AddrDSP@4" (ByVal addr As UInt32) As UInt32
    Public Declare Function L71_AddrHost Lib "L71W32.DLL" Alias "_L71_AddrHost@4" (ByVal addr As UInt32) As UInt32
    Public Declare Function L71_BCConfig Lib "L71W32.DLL" Alias "_L71_BCConfig@8" (ByVal configval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_BCConfigEx Lib "L71W32.DLL" Alias "_L71_BCConfigEx@12" (ByVal configval As UInt32, ByVal count As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_BCConfigMsg Lib "L71W32.DLL" Alias "_L71_BCConfigMsg@12" (ByVal configval As UInt32, ByVal msgaddr As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_BCCreateList Lib "L71W32.DLL" Alias "_L71_BCCreateList@28" (ByVal listconfigval As UInt32, ByVal count As Int32, ByVal msgconfigval As UInt32, ByVal cwd1 As UInt16, ByVal cwd2 As UInt16, ByRef data As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_BCCreateListEx Lib "L71W32.DLL" Alias "_L71_BCCreateListEx@32" (ByVal listconfigval As UInt32, ByVal skipval As Int32, ByVal count As Int32, ByVal msgconfigval As UInt32, ByVal cwd1 As UInt16, ByVal cwd2 As UInt16, ByRef data As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_BCCreateListExx Lib "L71W32.DLL" Alias "_L71_BCCreateListExx@32" (ByVal listconfigval As UInt32, ByVal skipval As Int32, ByVal count As Int32, ByVal msgconfigval As UInt32, ByVal cwd1 As UInt16, ByVal cwd2 As UInt16, ByRef data As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_BCCreateMsg Lib "L71W32.DLL" Alias "_L71_BCCreateMsg@20" (ByVal configval As UInt32, ByVal cwd1 As UInt16, ByVal cwd2 As UInt16, ByRef data As UInt16, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_BCGetMsg Lib "L71W32.DLL" Alias "_L71_BCGetMsg@8" (ByVal index As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Function L71_BCSchedAgain Lib "L71W32.DLL" Alias "_L71_BCSchedAgain@8" (ByVal index As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_BCSchedBranch Lib "L71W32.DLL" Alias "_L71_BCSchedBranch@12" (ByVal condition As UInt16, ByVal destindex As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_BCSchedBranchDin0 Lib "L71W32.DLL" Alias "_L71_BCSchedBranchDin0@8" (ByVal destindex As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_BCSchedBranchDin1 Lib "L71W32.DLL" Alias "_L71_BCSchedBranchDin1@8" (ByVal destindex As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_BCSchedBranchEx Lib "L71W32.DLL" Alias "_L71_BCSchedBranchEx@20" (ByVal condition1 As UInt16, ByVal condition2 As UInt16, ByVal condition3 As UInt16, ByVal destindex As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_BCSchedBuild Lib "L71W32.DLL" Alias "_L71_BCSchedBuild@16" (ByVal nummsgs As UInt16, ByRef msgaddr As UInt32, ByRef freq As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_BCSchedCall Lib "L71W32.DLL" Alias "_L71_BCSchedCall@8" (ByVal destindex As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_BCSchedCallCond Lib "L71W32.DLL" Alias "_L71_BCSchedCallCond@12" (ByVal condition As UInt16, ByVal destindex As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_BCSchedCallCondEx Lib "L71W32.DLL" Alias "_L71_BCSchedCallCondEx@20" (ByVal condition1 As UInt16, ByVal condition2 As UInt16, ByVal condition3 As UInt16, ByVal destindex As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_BCSchedEntry Lib "L71W32.DLL" Alias "_L71_BCSchedEntry@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_BCSchedFrame Lib "L71W32.DLL" Alias "_L71_BCSchedFrame@8" (ByVal timeval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_BCSchedFrameEnd Lib "L71W32.DLL" Alias "_L71_BCSchedFrameEnd@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_BCSchedFrameStart Lib "L71W32.DLL" Alias "_L71_BCSchedFrameStart@8" (ByVal timeval As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_BCSchedGap Lib "L71W32.DLL" Alias "_L71_BCSchedGap@8" (ByVal gapval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_BCSchedGoto Lib "L71W32.DLL" Alias "_L71_BCSchedGoto@8" (ByVal destindex As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_BCSchedHalt Lib "L71W32.DLL" Alias "_L71_BCSchedHalt@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function L71_BCSchedInt Lib "L71W32.DLL" Alias "_L71_BCSchedInt@8" (ByVal tagval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function L71_BCSchedIntCond Lib "L71W32.DLL" Alias "_L71_BCSchedIntCond@12" (ByVal condition As UInt16, ByVal tagval As UInt16, ByVal handleval As UInt32) As Int32
